--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,115 @@
-$color: deeppink;
-$bg: rgb(255, 245, 250);
+@font-face {
+  font-family: 'Lemonada';
+  font-style: normal;
+  font-weight: 100 900;
+  src: url(..//fonts/Lemonada-VariableFont_wght.ttf)
+}
+
+:root {
+
+  --level-one: translateZ(3rem);
+  --level-two: translateZ(6rem);
+  --level-three:translateZ(9rem);
+
+  --fw-normal: 400;
+  --fw-bold: 700;
+
+  --clr: #b7c9e5;
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+  margin: 0;
+}
 
 body {
-  background: $bg;
-  color: $color;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  font-family:Lemonada;
+}
+
+.card {
+  width: 400px;
+}
+
+.card_content {
+  text-align: center;
+  position: relative;
+  padding: 15em 5em;
+  transition: transform 3s;
+  background: rgb(146, 146, 146);
+  transform-style: preserve-3d;
+}
+
+.card:hover .card_content{
+  transform: rotateY(.5turn);
+}
+
+.card_front,
+.card_back {
+  position:absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 5em 3em;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+  display: grid;
+  align-content: center;
+}
+
+.card_front {
+  background-color: var(--clr);
+  background-image: url(/img/justin-veenema-p0znWUKpWvc-unsplash-fixed.jpg);
+  background-size:cover;
+  background-blend-mode:multiply;
+  color: rgb(241, 241, 241);
+}
+
+.card_front::before {
+  content: '';
+  position: absolute;
+  --spacer: 1rem;
+  top: var(--spacer);
+  bottom: var(--spacer);
+  left: var(--spacer);
+  right: var(--spacer);
+  border: 3px solid currentColor;
+  transform: var(--level-one);
+}
+
+.card_title {
+  text-align: right;
+  position:absolute;
+  bottom: 20px;
+  right: 30px;
+  font-size: 3.3rem;
+  transform: var(--level-three);
+  order: 2;
+  text-transform: uppercase;
+  line-height: 4rem;
+}
+
+.card_body {
+  text-align: left;
+  transform: var(--level-two);
+  font-weight: var(fw-normal);
+  font-size: 1.45rem;
+  line-height: 1.6;
+}
+
+.bold {
+
+  font-weight: var(--fw-bold);
+  text-transform: uppercase;
+  color: rgb(233, 209, 180);
+
+}
+
+.card_back {
+  transform: rotateY(.5turn);
+  color:rgb(241, 241, 241);
+  background:rgb(146, 146, 146);
 }
