background-img update

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -62,7 +62,7 @@ body {
 
 .card_front {
   background-color: var(--clr);
-  background-image: url(/img/justin-veenema-p0znWUKpWvc-unsplash-fixed.jpg);
+  background-image: url(../img/justin-veenema-p0znWUKpWvc-unsplash-fixed.jpg);
   background-size:cover;
   background-blend-mode:multiply;
   color: rgb(241, 241, 241);
